set nosetests to throw futurewarnings

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
   - "3.6"
 install:
   - python setup.py install_dependencies
-script: nosetests -v
+script: PYTHONWARNINGS=default nosetests -v
