--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+# Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs matrix
+
+matrix:
+  include:
+    - python: 3.7 
+      dist: xenial 
+      sudo: true
 install:
   - python setup.py install_dependencies
-script: nosetests -v
+script: PYTHONWARNINGS=default nosetests -v
